# McLess

./: .gitignore  README.md  pyproject.toml
mcless/: __main__.py  dev.ipynb  model.py
test/: classifier_bench.py
