[tool.poetry]
name = "mcless"
version = "0.1.0"
description = "Multi-Class Least Error Squared Sum"
authors = ["Joshua Ferguson <joshua.ferguson.273@gmail.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
polars = "^0.14.31"
seaborn = "^0.12.1"
matplotlib = "^3.6.2"



[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
scikit-learn = "^1.1.3"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
